# open-vmos-aosp_5.1

./: .gitignore  .gitmodules  Compile AOSP with Docker.md  README.md  build.sh  build_zip.sh  make_arm64_user.sh  make_arm_user.sh  pack.sh  pack_arm64_user.sh  pack_arm_user.sh
bionic/libc/: Android.mk
bionic/linker/: Android.mk  debugger.cpp  dlfcn.cpp  linker.cpp  linker.h  linker_debug.h  linker_environ.cpp  linker_mapped_file_fragment.cpp  linker_phdr.cpp  linker_phdr.h
device/common/: generate-packages.sh  populate-new-device.sh
device/sample/: CleanSpec.mk
docs/source.android.com/: .gitignore  Doxyfile  DoxygenLayout.xml  README  hal_doxygen.css  hal_footer.html  hal_header.html
hardware/intel/common/libwsbm/: COPYING  Makefile.am  configure.ac  libwsbm.pc.in
hardware/intel/common/libwsbm/src/: Android.mk  Makefile.am  config.h  wsbm_atomic.h  wsbm_driver.c  wsbm_driver.h  wsbm_fencemgr.c  wsbm_fencemgr.h  wsbm_mallocpool.c  wsbm_manager.c  wsbm_manager.h  wsbm_mm.c  wsbm_mm.h  wsbm_pool.h  wsbm_priv.h  wsbm_slabpool.c  wsbm_ttmpool.c  wsbm_userpool.c  wsbm_util.h
hardware/intel/img/psb_video/fw/topazhp/: Android.mk  H263MasterFirmwareCBR_bin.c  H263MasterFirmwareCBR_bin.h  H263MasterFirmwareLLRC_bin.c  H263MasterFirmwareLLRC_bin.h  H263MasterFirmwareVBR_bin.c  H263MasterFirmwareVBR_bin.h  H263MasterFirmware_bin.c  H263MasterFirmware_bin.h  H264MVCMasterFirmwareCBR_bin.c  H264MVCMasterFirmwareCBR_bin.h  H264MVCMasterFirmwareLLRC_bin.c  H264MVCMasterFirmwareLLRC_bin.h  H264MVCMasterFirmwareVBR_bin.c  H264MVCMasterFirmwareVBR_bin.h  H264MVCMasterFirmware_bin.c  H264MVCMasterFirmware_bin.h  H264MasterFirmwareALL_bin.c  H264MasterFirmwareALL_bin.h  H264MasterFirmwareCBR_bin.c  H264MasterFirmwareCBR_bin.h  H264MasterFirmwareLLRC_bin.c  H264MasterFirmwareLLRC_bin.h  H264MasterFirmwareVBR_bin.c  H264MasterFirmwareVBR_bin.h  H264MasterFirmwareVCM_bin.c  H264MasterFirmwareVCM_bin.h  H264MasterFirmware_bin.c  H264MasterFirmware_bin.h  JPEGMasterFirmware_bin.c  JPEGMasterFirmware_bin.h  MPG2MasterFirmwareCBR_bin.c  MPG2MasterFirmwareCBR_bin.h  MPG2MasterFirmwareLLRC_bin.c  MPG2MasterFirmwareLLRC_bin.h  MPG2MasterFirmwareVBR_bin.c  MPG2MasterFirmwareVBR_bin.h  MPG2MasterFirmware_bin.c  MPG2MasterFirmware_bin.h  MPG4MasterFirmwareCBR_bin.c  (+12 more)
hardware/intel/img/psb_video/src/: Android.mk  Makefile.am  README  object_heap.c  object_heap.h  pnw_H263ES.c  pnw_H263ES.h  pnw_H264.c  pnw_H264.h  pnw_H264ES.c  pnw_H264ES.h  pnw_MPEG2.c  pnw_MPEG2.h  pnw_MPEG4.c  pnw_MPEG4.h  pnw_MPEG4ES.c  pnw_MPEG4ES.h  pnw_VC1.c  pnw_VC1.h  pnw_cmdbuf.c  pnw_cmdbuf.h  pnw_hostcode.c  pnw_hostcode.h  pnw_hostheader.c  pnw_hostheader.h  pnw_hostjpeg.c  pnw_hostjpeg.h  pnw_jpeg.c  pnw_jpeg.h  pnw_jpegdec.h  pnw_rotate.c  pnw_rotate.h  psb_buffer.c  psb_buffer.h  psb_buffer_dm.c  psb_cmdbuf.c  psb_cmdbuf.h  psb_def.h  psb_drv_debug.c  psb_drv_debug.h  (+64 more)
hardware/intel/img/psb_video/src/android/: psb_HDMIExtMode.c  psb_HDMIExtMode.h  psb_android_glue.cpp  psb_android_glue.h  psb_gralloc.cpp  psb_gralloc.h  psb_mds.cpp  psb_mds.h  psb_output_android.c  psb_output_android.h  psb_surface_gralloc.c
hardware/intel/img/psb_video/src/hwdefs/: coreflags.h  dma_api.h  dxva_cmdseq_msg.h  dxva_fw_ctrl.h  dxva_fw_flags.h  dxva_msg.h  fwrk_msg_mem_io.h  h264_macroblock_mem_io.h  img_defs.h  img_types.h  lldma_defs.h  mem_io.h  msvdx_cmds_io2.h  msvdx_core_regs_io2.h  msvdx_defs.h  msvdx_dmac_linked_list.h  msvdx_dmac_regs_io2.h  msvdx_mtx_reg_io2.h  msvdx_offsets.h  msvdx_rendec_mtx_slice_cntrl_reg_io2.h  msvdx_rendec_vc1_reg_io2.h  msvdx_vdmc_reg_io2.h  msvdx_vec_h264_reg_io2.h  msvdx_vec_jpeg_reg_io2.h  msvdx_vec_mpeg2_reg_io2.h  msvdx_vec_mpeg4_reg_io2.h  msvdx_vec_reg_io2.h  msvdx_vec_vc1_reg_io2.h  msvdx_vec_vp8_line_store_mem_io2.h  msvdx_vec_vp8_reg_io2.h  mvea_regs.h  reg_io2.h  topazSC_defs.h  topaz_db_regs.h  topaz_defs.h  topaz_vlc_regs.h  topazhp_core_regs.h  topazhp_default_params.h  topazhp_multicore_regs.h  topazhp_multicore_regs_old.h
hardware/intel/img/psb_video/src/mrst/: lnc_H263ES.c  lnc_H263ES.h  lnc_H264ES.c  lnc_H264ES.h  lnc_MPEG4ES.c  lnc_MPEG4ES.h  lnc_cmdbuf.c  lnc_cmdbuf.h  lnc_hostcode.c  lnc_hostcode.h  lnc_hostheader.c  lnc_hostheader.h  psb_H264.c  psb_H264.h  psb_MPEG2.c  psb_MPEG2.h  psb_MPEG2MC.c  psb_MPEG4.c  psb_MPEG4.h  psb_VC1.c  psb_VC1.h  psb_deblock.c  pvr2d.h
hardware/intel/img/psb_video/src/x11/: psb_coverlay.c  psb_ctexture.c  psb_x11.c  psb_x11.h  psb_xrandr.c  psb_xrandr.h  psb_xvva.c
hardware/invensense/: Android.mk
hardware/libhardware/: hardware.c
hardware/libhardware_legacy/: Android.mk
libcore/: Android.mk  CaCerts.mk  CleanSpec.mk  Docs.mk  JavaLibrary.mk  NOTICE  NativeCode.mk
libcore/benchmarks/: Android.mk
libcore/expectations/: brokentests.txt  icebox.txt  knownfailures.txt
libcore/include/: ScopedIcuLocale.h
libnativehelper/: Android.mk  JniInvocation.cpp
libnativehelper/tests/: JniInvocation_test.cpp
pdk/: .gitignore
sdk/: .gitignore  build.gradle  changes.txt
sdk/adtproductbuild/: Android.mk  build.xml
sdk/annotations/: NOTICE  build.gradle
sdk/apps/: .gitignore
sdk/avdlauncher/: .gitignore  Android.mk  avdlauncher.exe.manifest  build.gradle
sdk/bash_completion/: adb.bash
sdk/eclipse/: .gitignore  TYCHO_BUILD  build.gradle  dictionary.txt  pom.xml  settings.xml
sdk/files/: post_tools_install.bat
sdk/find_java/: .gitignore  build.gradle  find_java.exe.manifest  find_java.sln  find_java_exe.vcproj  find_java_lib.vcproj
sdk/find_lock/: .gitignore  find_lock.cpp  find_lock.exe.manifest  find_lock.h  find_lock_exe.cpp  find_lock_exe.vcproj
sdk/monitor/: Android.mk  build.gradle  monitor.bat
sdk/p2gen/: README.txt  pom.xml
sdk/sdklauncher/: .gitignore  Android.mk  build.gradle  sdklauncher.exe.manifest  sdklauncher.vcproj
sdk/testapps/: .gitignore
system/extras/: CleanSpec.mk
system/keymaster/: .clang-format  .gitignore  Android.mk  Makefile  asymmetric_key.cpp  asymmetric_key.h  authorization_set.cpp  authorization_set_test.cpp  dsa_operation.cpp  dsa_operation.h  ecdsa_operation.h  (+20 more)
vmosdocs/: README_CN.md
(+3890 files in other folders)
